--- a/aula2/aula2/index.html
+++ b/aula2/aula2/index.html
@@ -10,6 +10,11 @@
 </head>     
 <body>
 
+     <script>
+        alert("Olá mundo");
+        console.log("Olá mundo 2!")
+    </script>
+    
     <section class="sec_destaque">
         <!--
         <img src="images/tecnologia.webp" />
@@ -79,4 +84,5 @@
 
     
 </body>
+
 </html>
